--- a/CV_HTML/public_html/index.html
+++ b/CV_HTML/public_html/index.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="avatar">
-                        <img id="pp" src="images/p.jpg" alt="avatar"/> </div>
+                        <img id="pp" src="images/d.jpg" alt="avatar"/> </div>
                 </div> 
             </div>
             <div class="container">
