--- a/js/public_html/index.html
+++ b/js/public_html/index.html
@@ -5,7 +5,7 @@
     <title>TODO supply a title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="calcu.js" async></script>
+    <script src="calculatrice.js" async></script>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -36,10 +36,10 @@
                 </div>
             </div>
             <div class="operateurs">
-                <div class="operateur" id="+"><button type="button">+</button></div>
-                <div class="operateur" id="-"><button type="button">-</button></div>
-                <div class="operateur" id="*"><button type="button">*</button></div>
-                <div id="=" class="operateur"><button type="button">=</button></div>
+                <div class="operateur" id="plus"><button type="button">+</button></div>
+                <div class="operateur" id="moins"><button type="button">-</button></div>
+                <div class="operateur" id="fois"><button type="button">*</button></div>
+                <div id="egal" class="operateur"><button type="button">=</button></div>
             </div>
         </div>
     </div>
